force-app/main/default/objects/sugati__Invoice_Setting__c/sugati__Invoice_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration of Invoice</description>
    <label>Invoice Setting</label>
</CustomObject>