force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Date_Format__c.field-meta.xml
<CustomField>
    <fullName>sugati__Date_Format__c</fullName>
    <description>Change the Date Formate across the PDF</description>
    <inlineHelpText>Ex. {0,date,MM/dd/yy}</inlineHelpText>
    <label>Date Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>