force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Display_Credit_Card_Charge__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Credit_Card_Charge__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Credit Card Charge</label>
    <type>Checkbox</type>
</CustomField>