force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Display_Flight_Details__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Flight_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flight Details Section</description>
    <label>Display Flight Details</label>
    <type>Checkbox</type>
</CustomField>