force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Display_Inclusion_Section__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Inclusion_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Opportunity Details</label>
    <type>Checkbox</type>
</CustomField>