force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Display_Pax_Detail_Section__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Pax_Detail_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Pax Detail Section</label>
    <type>Checkbox</type>
</CustomField>