force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Display_Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Terms_And_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Terms And Conditions</label>
    <type>Checkbox</type>
</CustomField>