force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Field_Labels_Bold__c.field-meta.xml
<CustomField>
    <fullName>sugati__Field_Labels_Bold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Labels Bold?</label>
    <type>Checkbox</type>
</CustomField>