force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Flight_Detail_Section_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>sugati__Flight_Detail_Section_Record_Types__c</fullName>
    <description>supplier booking record types that we need to display for flight details, record types must be the comma separated</description>
    <inlineHelpText>record types must be the comma separated</inlineHelpText>
    <label>Flight Detail Section Record Types</label>
    <type>TextArea</type>
</CustomField>