force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Font_Family__c.field-meta.xml
<CustomField>
    <fullName>sugati__Font_Family__c</fullName>
    <inlineHelpText>Ex: Arial Unicode MS, sans-serif, SansSerif, Dialog, serif, monospace, courier, monospaced</inlineHelpText>
    <label>Font Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>