force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Font_Size__c.field-meta.xml
<CustomField>
    <fullName>sugati__Font_Size__c</fullName>
    <inlineHelpText>Ex- 12pt</inlineHelpText>
    <label>Font Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>