force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Footer_CSS__c.field-meta.xml
<CustomField>
    <fullName>sugati__Footer_CSS__c</fullName>
    <label>Footer CSS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>