force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Header_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__Header_Image_URL__c</fullName>
    <label>Header Image URL</label>
    <type>Url</type>
</CustomField>