force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Inclusion_Section_Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__Inclusion_Section_Title__c</fullName>
    <label>Inclusion Section Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>