force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Invoice_Details_Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__Invoice_Details_Title__c</fullName>
    <label>Invoice Details Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>