force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Page_CSS__c.field-meta.xml
<CustomField>
    <fullName>sugati__Page_CSS__c</fullName>
    <defaultValue>&quot;A4&quot;</defaultValue>
    <description>page size (eg A4, A3, etc)</description>
    <label>Page Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>