force-app/main/default/objects/sugati__Invoice_Setting__c/fields/sugati__Supplier_Booking_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>sugati__Supplier_Booking_Record_Types__c</fullName>
    <label>Supplier Booking Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>